# HumanityGenerationSimulation

./: CMakeLists.txt
src/: main.cpp
src/core/: Board.cpp  Board.h  sync_read_write.cpp  sync_read_write.h
src/data structures/: Data.cpp  Data.h  Event.cpp  Event.h  Games.cpp  Games.h  Human.cpp  Human.h  Structs.h  enums.h
src/utilities/: Design.cpp  Design.hpp  Exceptions.cpp  Exceptions.h
